Logger crea un archivo de logs
