# docs/swagger.json
@@ -32,6 +32,20 @@
                 }
             }
         },
+        "/logs": {
+            "get": {
+                "description": "Get the service's logs.",
+                "produces": [
+                    "text/plain"
+                ],
+                "summary": "Get the service's logs.",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/recommended": {
             "get": {
                 "description": "Get recommended trainings according to current ruleset.",
@@ -90,6 +104,9 @@
                                 "$ref": "#/definitions/model.Training"
                             }
                         }
+                    },
+                    "423": {
+                        "description": "Locked"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -168,6 +185,9 @@
                     "400": {
                         "description": "Bad Request"
                     },
+                    "423": {
+                        "description": "Locked"
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
@@ -241,6 +261,9 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "423": {
+                        "description": "Locked"
                     },
                     "500": {
                         "description": "Internal Server Error"
